name : lib-aurisi
version : 0.0.0.1
synopsis : Integrated GUI for the AURIS mission control system library
description:
    The graphical user interface for the (integrated) version of AURIS
license : BSD3
license-file : LICENSE
author : Michael Oswald
build-type: Simple
maintainer: michael.oswald@onikudaki.net
homepage:
category: UI,Graphics
cabal-version: >=2.0

extra-source-files:
  theme.tar.gz

source-repository head
  type: git
  location: http://github.com/oswald2/AURIS

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

flag llvm
    description:
        build library with llvm
    default: False

flag optimize
    description:
      build library with optimization
    default: False

flag sle 
    description:
      Build with SLE support. Requires a valid installation of ESA's C++ SLE API
    default: False 


library 
  exposed-modules:
    GUI.MainWindow
    GUI.MainWindowCallbacks
    GUI.MainWindowActions
    GUI.MessageTypes
    GUI.MessageDisplay
    GUI.MessageDetails
    GUI.Logo
    GUI.About
    GUI.Theme
    AurisInterface
    AurisProcessing
    AurisConfig
    AurisMissionSpecific
    AurisStart
    Version

  Hs-Source-Dirs: src/

  Build-Depends:
    base == 4.*,
    text >= 1.2.2.0,
    rio,
    lens,
    containers,
    esa-base,
    esa-db-mongodb,
    esa-space-protocols,
    gui-base,
    auris-tm-displays,
    auris-tc-displays,
    auris-control-displays,
    mcs-interface,
    gitrev,
    aeson,
    aeson-pretty,
    conduit,
    directory,
    filepath,
    text-short,
    file-embed,
    hashtables-mo,
    gi-gtk,
    gi-gtk-hs,
    gi-gdk,
    gi-gdkpixbuf,
    gi-gobject,
    gi-gio,
    gi-glib,
    gi-gtksource,
    tar,
    zlib,
    stm,
    text-builder

  if flag(sle)
    Build-depends:
          esa-sle
    cpp-options: -DHAS_SLE


  default-extensions:
        BangPatterns
        BinaryLiterals
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        OverloadedLabels
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        ViewPatterns
        NumericUnderscores


  default-language: Haskell2010
  if flag(llvm)
        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                     -funbox-strict-fields -fllvm -optlo-O3 -threaded -rtsopts 
  else
    if flag(optimize)
        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                     -funbox-strict-fields  -threaded -rtsopts 
    else
        ghc-options: -O0 -g2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                     -funbox-strict-fields  -threaded -rtsopts 




